# Household_budhetting_application---diplom_4_course

./: CMakeLists.txt  README.md  generate-vs-project.bat
Common/: Accounts.cpp  Accounts.h  CMakeLists.txt  Categories.h  Category.cpp  CommonExport.h  Enums.h  Operations.cpp  Operations.h  Utils.cpp  Utils.h
DataManager/: CMakeLists.txt  DataManager.cpp  DataManager.h  DataManager.hpp  DataManagerExport.h  IDataStorage.h
DataStorage/: CMakeLists.txt  DataStorage.cpp  DataStorage.h  DataStorage.hpp  DataStorageExport.h  Database.cpp  Database.h  SqlAccounts.cpp  SqlAccounts.h  SqlBase.cpp  SqlBase.h  SqlCategories.cpp  SqlCategories.h  SqlOperations.cpp  SqlOperations.h  SqlQuery.cpp  SqlQuery.h
HomeFinance/: AccountsDialog.qml  AccountsList.qml  AccountsModel.cpp  AccountsModel.h  AccountsProxyModel.cpp  AccountsProxyModel.h  AccountsSection.qml  AccountsTabsProxyModel.cpp  AccountsTabsProxyModel.h  AddAccountDialog.qml  AddCategoryDialog.qml  AnalyticsDateRangeSelector.qml  AnalyticsProxyModel.cpp  AnalyticsProxyModel.h  AnalyticsSection.qml  BorderLine.qml  CMakeLists.txt  CategoriesDialog.qml  CategoriesList.qml  CategoriesModel.cpp  CategoriesModel.h  CategoriesPopup.qml  CategoriesProxyModel.cpp  CategoriesProxyModel.h  CategoriesSection.qml  CommonAnalyticsSection.qml  DisableFrame.qml  EditLabel.qml  EditLabelWithIcon.qml  EditorController.cpp  EditorController.h  ExpandingButton.qml  ExpandingMenu.qml  FrameItem.qml  GlobalDefines.h  HFDialogWindow.qml  HFEditText.qml  HFLabel.qml  HFSettings.cpp  HFSettings.h  (+25 more)
TestsForHomeFinance/: CMakeLists.txt  main.cpp
